<resources>
    <string name="app_name" translatable="false">Cuberite</string>
    <string name="do_install_cuberite">Install Cuberite</string>
    <string name="do_start_cuberite">Start Server</string>
    <string name="do_stop_cuberite">Stop Server</string>
    <string name="do_kill_cuberite">Kill Server\n(If stopping doesn\'t work)</string>
    <string name="do_execute_line">Execute</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="do_open_control">Control</string>
    <string name="do_open_log">Console</string>
    <string name="do_open_settings">Settings</string>

    <string name="status_downloading_cuberite">Downloading Cuberite…</string>
    <string name="status_installing_cuberite">Installing Cuberite…</string>
    <string name="status_install_success">Successfully installed Cuberite!</string>
    <string name="status_download_error">Download error:</string>
    <string name="status_no_connection">Please verify that your internet connection works before downloading.</string>
    <string name="status_unzip_error">Failed to unzip the server files</string>
    <string name="status_update_binary_error">Please stop the server before updating the binary</string>
    <string name="status_delete_file_error">Something went wrong: Couldn\'t delete file</string>
    <string name="status_failed_start">Cuberite failed to start. Ensure that your binary has the following ABI: %1$s</string>
 <!-- yet unused -->   <string name="status_program_exited">Info: Cuberite exited with code: </string>
    <string name="status_permissions_needed">Permissions needed</string>
    <string name="status_shasum_error">SHA-1 validation error</string>
    <string name="status_missing_filemanager">No filemanager found: Please install one</string>

    <string name="notification_cuberite_running">Cuberite is running!</string>

    <string name="service_description">This service runs Cuberite and ensures that it is not killed by the system.</string>
    <string name="installservice_description">This service downloads, unzips and installs Cuberite.</string>

    <string name="inputLine_hint">Enter commands…</string>

    <string name="message_externalstorage_permission">Cuberite stores its worlds on the external storage by default, which is readable and writable by any app. For this, you need to allow Cuberite to write to the external storage. If you don\'t want to give the necessary permission, please select the \"Deny\" option and Cuberite will use the app\'s private storage.</string>
    <string name="message_shasum_not_matching">SHA-1 sums don\'t match. This may indicate an attempt to spoof you, or just a download error. Please try downloading Cuberite again, and if the error persists, you may bypass the check by installing Cuberite via the settings.</string>

    <string name="title_activity_settings">Settings</string>

    <string name="settings_theme">Theme</string>
    <string name="settings_theme_choose">Choose theme</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_auto">Automatic</string>

    <string name="settings_download_host">Download Server</string>
    <string name="settings_download_host_summary">The server from which Cuberite will download from. If you are running your own (automated) builds, you can change this setting and Cuberite will use your own server. Please note, that in order to have working automatic updates, the server needs to provide valid SHA-1 files.</string>

    <string name="settings_install_heading">Installation options</string>
    <string name="settings_install_update">Perform Cuberite update</string>
    <string name="settings_install_update_explanation">Use this section from time to time to update your installation of Cuberite. Please note that if you perform a server.zip update this may overwrite custom server settings.</string>
    <string name="settings_install_update_binary">Download and install Cuberite binary</string>
    <string name="settings_install_update_server">Download and install server.zip</string>
    <string name="settings_install_manually">Install zip files manually</string>
    <string name="settings_install_manually_explanation">Instead of downloading Cuberite you can choose to use your own compiled binaries. Use this only if you understand what you are doing.</string>
    <string name="settings_install_manually_abi">Required ABI for your device: %1$s</string> <!-- Do not translate %1$s, its the placeholder for the ABI -->
    <string name="settings_install_select_binary">Select and install binary zip file</string>
    <string name="settings_install_select_server">Select and install server.zip</string>
    <string name="settings_install_no_sha">Install without SHA-1 check</string>
    <string name="settings_install_no_sha_explanation">Normally, Cuberite verifies the downloaded executables to make sure Cuberite was downloaded correctly. Use this button if the verification fails, but please note that you are disabling a security feature by that.</string>
    <string name="settings_install_no_sha_button">Download and install Cuberite</string>

    <string name="settings_webadmin_heading">Webadmin</string>
    <string name="settings_webadmin_explanation">For fine-tuning your server, you are entitled to use the built-in Webadmin. Use the settings here to set a username and password for it</string>
    <string name="settings_webadmin_open">Open Webadmin</string>
    <string name="settings_webadmin_login">Change login credentials</string>
    <string name="settings_webadmin_not_installed_title">Cuberite is not installed</string>
    <string name="settings_webadmin_not_installed">Before setting the Webadmin credentials, Cuberite needs to be installed before. You can either choose to install it now or just close this dialog</string>
    <string name="settings_webadmin_not_running">Cuberite needs to be running before you can access the Webadmin</string>
    <string name="settings_webadmin_error">Something went wrong while accessing the Webadmin configuration</string>
    <string name="settings_webadmin_success">Success! The new credentials are activated when you start Cuberite the next time</string>

    <string name="settings_troubleshooting_heading">Troubleshooting</string>
    <string name="settings_authentication_errors">Authentication errors</string>
    <string name="settings_authentication_errors_explanation">If you have troubles connecting to Cuberite and get the message \"Failed to authenticate!\", you might want to disable authentication.</string>
    <string name="settings_authentication_toggle">Authentication</string>
    <string name="settings_authentication_toggle_error">Something went wrong while accessing the Server configuration</string>
    <string name="settings_authentication_toggle_success">Success! Authentication is now %1$s! Restart the server to activate the change</string>

    <string name="settings_info_heading">Info</string>
    <string name="settings_info_version">Version %1$s</string>
    <string name="settings_info_debug">Debug information</string>
    <string name="settings_info_libraries">Third-party Libraries</string>
    <string name="settings_info_libraries_explanation">This app uses third-party libraries to provide certain features. Below is some info about these libraries as well as their respective licenses</string>

    <string name="ini4j_license">License for the [ini4j] library (used for manipulating Cuberite settings)</string>
    <string name="ini4j_license_description" translatable="false">Copyright 2005,2009 Ivan SZKIBA\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

     http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>

    <string name="pathutils_license">License for the PathUtils functions (used for installing Cuberite manually to select binaries)</string>
    <string name="pathutils_license_description" translatable="false">A few edits were made to wrap some functions into a new class. Below is a copy of the original license.\n\n

Copyright © 2011 - 2013 Paul Burke\n\n

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n\n

  http://www.apache.org/licenses/LICENSE-2.0\n\n

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
    </string>
</resources>
