<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/title_activity_settings"
        app:iconSpaceReserved="false">
        <ListPreference
            android:key="theme"
            android:title="@string/settings_theme"
            app:useSimpleSummaryProvider="true"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_webadmin_heading"
        app:iconSpaceReserved="false">
        <Preference
            android:summary="@string/settings_webadmin_explanation"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="webadminOpen"
            android:title="@string/settings_webadmin_open"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="webadminLogin"
            android:title="@string/settings_webadmin_login"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_install_update"
        app:iconSpaceReserved="false">
        <Preference
            android:summary="@string/settings_install_update_explanation"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="installUpdateBinary"
            android:title="@string/settings_install_update_binary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="installUpdateServer"
            android:title="@string/settings_install_update_server"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_install_no_sha"
        app:iconSpaceReserved="false">
        <Preference
            android:summary="@string/settings_install_no_sha_explanation"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="installNoShaButton"
            android:title="@string/settings_install_no_sha_button"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_install_manually"
        app:iconSpaceReserved="false">
        <Preference
            android:key="abiText"
            android:summary="@string/settings_install_manually_explanation"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="installBinary"
            android:title="@string/settings_install_select_binary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="installServer"
            android:title="@string/settings_install_select_server"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_troubleshooting_heading"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:key="troubleshootingAuthenticationToggle"
            android:title="@string/settings_authentication_toggle"
            android:summary="@string/settings_authentication_errors_explanation"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_info_heading"
        app:iconSpaceReserved="false">
        <Preference
            android:key="infoDebugInfo"
            android:title="@string/settings_info_debug"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="thirdPartyLicenses"
            android:title="@string/settings_info_libraries"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="version"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>