<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/openControl"
        android:enabled="true"
        android:icon="@drawable/ic_control"
        android:title="@string/do_open_control"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/openLogButton"
        android:enabled="true"
        android:icon="@drawable/ic_console"
        android:title="@string/do_open_log"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/openSettingsButton"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/do_open_settings"
        app:showAsAction="ifRoom" />
</menu>